added display of group name in header

--- a/src/app/hubpage/hubpage.component.html
+++ b/src/app/hubpage/hubpage.component.html
@@ -1,2 +1,2 @@
-<app-header></app-header>
+<app-header *ngIf="currentGroup != null" groupName="{{currentGroup.name}}"></app-header>
 <app-placeholder></app-placeholder>
