--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,8 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
+@import './custom-tailwind/custom-components.css';
 @import 'tailwindcss/utilities';
+@import './custom-tailwind/custom-utilities.css';
 
-.btn {
-  @apply w-1/2 flex items-center justify-center rounded-md border border-gray-300
-}
 
 
