added css style to header

--- a/src/app/hubpage/header/header.component.html
+++ b/src/app/hubpage/header/header.component.html
@@ -1,2 +1,7 @@
-<h1 class="text-ptb-orange">{{groupName}}</h1>
-<button class="btn">Click me</button>
+<header class="flex items-center py-3 bg-ptb-gray">
+  <div>
+    <h1 class="block px-3 text-2xl">{{groupName}}</h1>
+  </div>
+</header>
+
+
