--- a/src/app/hubpage/hubpage.component.html
+++ b/src/app/hubpage/hubpage.component.html
@@ -1,2 +1,14 @@
-<app-header *ngIf="currentGroup != null" groupName="{{currentGroup.name}}"></app-header>
-<app-placeholder></app-placeholder>
+<header class="flex items-center py-3 bg-ptb-gray">
+  <app-header *ngIf="currentGroup != null" groupName="{{currentGroup.name}}"></app-header>
+</header>
+
+<div class="grid grid-cols-4">
+  <div class="col-span-3">
+    <app-placeholder></app-placeholder>
+  </div>
+  <div class="border-ptb-gray h-full">
+    <app-group-navigation-bar></app-group-navigation-bar>
+  </div>
+</div>
+
+
