added basic styles and style to groupList item

--- a/src/app/hubpage/hubpage.component.html
+++ b/src/app/hubpage/hubpage.component.html
@@ -1,4 +1,4 @@
-<header class="flex items-center py-3 bg-ptb-gray">
+<header class="flex items-center py-3 bg-ptb-gray-500">
   <app-header [groupName]="dataService.selectedGroup == null ? 'Place to Beer' : dataService.selectedGroup.name"></app-header>
 </header>
 
@@ -6,7 +6,7 @@
   <div class="col-span-3">
     <app-placeholder></app-placeholder>
   </div>
-  <div class="border-ptb-gray h-full">
+  <div class="border-ptb-gray-500 h-full">
     <app-group-navigation-bar></app-group-navigation-bar>
   </div>
 </div>
