--- a/src/app/hubpage/group-navigation-bar/group-list/group-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-list.component.html
@@ -1,4 +1,6 @@
 <div class="py-4">
-  <app-group-item></app-group-item>
+<p *ngIf="dataService.selectedGroup === null">Please select a group</p>
+<app-group-item-active *ngIf="dataService.selectedGroup != null" [group]="dataService.selectedGroup"></app-group-item-active>
+<p *ngIf="dataService.selectedGroup !== null">Select other group</p>
+<app-group-item *ngFor="let group of dataService.nonSelectedGroups" [groupName]="group.name" (click)="this.changeSelectedGroup(group)"></app-group-item>
 </div>
-
