--- a/src/app/hubpage/placeholder/placeholder.component.html
+++ b/src/app/hubpage/placeholder/placeholder.component.html
@@ -1,1 +1,1 @@
-<p>No group was selected</p>
+<p>{{dataService.selectedGroup == null ? "No group was selected" : "Welcome to " + dataService.selectedGroup.name + "!"}}</p>
