--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-item-active.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-item-active.component.html
@@ -1,6 +1,5 @@
 <div class="ptb-list-item">
-  <span> {{group.name}} <button>Config</button> </span>
-  <br>
+  <div> {{group.name}} </div>
   <div *ngIf="dataService.userMembershipMap.has(group.id)">
       <app-group-item-active-user-item *ngFor="let userMembership of dataService.userMembershipMap.get(group.id)" [userMembership]="userMembership"></app-group-item-active-user-item>
   </div>
