--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-item-active.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-item-active.component.html
@@ -1,7 +1,18 @@
-<div class="ptb-list-item">
-  <div> {{group.name}} </div>
-  <div *ngIf="dataService.userMembershipMap.has(group.id)">
+<div class="grid grid-cols-1">
+  <div class="ptb-list-item">
+    <svg *ngIf="group.name" class="h-4 w-4 m-4 fill-current text-ptb-dark-blue-600" xmlns="http://www.w3.org/2000/svg"
+         viewBox="0 0 20 20"
+         fill="currentColor">
+      <path
+        d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"/>
+    </svg>
+    <span class="text-ptb-orange-500 text-lg font-semibold">{{group.name}}</span>
+  </div>
+
+  <div class="mx-5">
+    <div *ngIf="dataService.userMembershipMap.has(group.id)">
       <app-group-item-active-user-item *ngFor="let userMembership of dataService.userMembershipMap.get(group.id)" [userMembership]="userMembership"></app-group-item-active-user-item>
+    </div>
   </div>
 </div>
 
