--- a/src/app/hubpage/group-navigation-bar/group-list/group-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-list.component.html
@@ -1,6 +1,15 @@
-<div class="py-4">
-<p *ngIf="dataService.selectedGroup == null">Please select a group</p>
-<app-group-item-active *ngIf="dataService.selectedGroup != null" [group]="dataService.selectedGroup"></app-group-item-active>
-<p *ngIf="dataService.selectedGroup != null">Select other group</p>
-<app-group-item *ngFor="let group of dataService.nonSelectedGroups" [groupName]="group.name" (click)="this.changeSelectedGroup(group)"></app-group-item>
+<div class="flex flex-col space-y-2 py-4">
+
+  <div *ngIf="dataService.selectedGroup == null">Please select a group</div>
+  <div>
+    <app-group-item-active *ngIf="dataService.selectedGroup != null"
+                           [group]="dataService.selectedGroup"></app-group-item-active>
+  </div>
+
+
+  <div *ngIf="dataService.selectedGroup != null">Switch hubpage to</div>
+  <app-group-item *ngFor="let group of dataService.nonSelectedGroups" [groupName]="group.name"
+                  (click)="this.changeSelectedGroup(group)"></app-group-item>
+
+
 </div>
