refactored last commit: centered role item

--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-item-active-user-item/group-item-active-user-item.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-item-active-user-item/group-item-active-user-item.component.html
@@ -1,4 +1,4 @@
 <div class="flex justify-between bg-white border border-solid border-ptb-gray-700 rounded-sm p-2">
-  <span>{{userMembership.user.name}}</span>
-  <span class="text-xs text-ptb-orange-500">{{userMembership.role}}</span>
+  <div>{{userMembership.user.name}}</div>
+  <div class="flex items-center text-xs text-ptb-orange-500">{{userMembership.role}}</div>
 </div>
