added super cool placeholder style

--- a/src/app/hubpage/hubpage.component.html
+++ b/src/app/hubpage/hubpage.component.html
@@ -1,4 +1,4 @@
-<header class="flex items-center py-3 bg-ptb-gray-500">
+<header class="flex items-center py-3 bg-ptb-blue-500">
   <app-header [groupName]="dataService.selectedGroup == null ? 'Place to Beer' : dataService.selectedGroup.name"></app-header>
 </header>
 
