--- a/src/app/hubpage/placeholder/placeholder.component.html
+++ b/src/app/hubpage/placeholder/placeholder.component.html
@@ -1,1 +1,4 @@
-<p>{{dataService.selectedGroup == null ? "No group was selected" : "Welcome to " + dataService.selectedGroup.name + "!"}}</p>
+<div class="flex h-full items-center justify-center heropattern-ilikefood-ptb-gray-600 opacity-50">
+  <div class="text-3xl">{{dataService.selectedGroup == null ? "No group was selected" : "Welcome to " + dataService.selectedGroup.name + "!"}}</div>
+</div>
+
