--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-item-active.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-item-active.component.html
@@ -7,6 +7,9 @@
         d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"/>
     </svg>
     <span class="text-ptb-orange-500 text-lg font-semibold">{{group.name}}</span>
+    <button class="btn" (click)="onEditGroup()">
+      Edit Group
+    </button>
   </div>
 
   <div class="mx-5">
@@ -15,4 +18,6 @@
     </div>
   </div>
 </div>
+
+<app-group-edit-popup [group]="group"></app-group-edit-popup>
 
