--- a/src/app/hubpage/group-navigation-bar/group-navigation-bar.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-navigation-bar.component.html
@@ -1,4 +1,7 @@
 <div class="p-4">
   <app-group-list></app-group-list>
+  <button class="btn" (click)="createGroupClick()">Create Group</button>
 </div>
+
+<app-create-group-popup></app-create-group-popup>
 
