--- a/src/custom-tailwind/custom-components.css
+++ b/src/custom-tailwind/custom-components.css
@@ -5,3 +5,25 @@
 .ptb-list-item {
   @apply bg-ptb-gray-400 rounded-md border-solid border border-ptb-gray-800 p-1 hover:bg-ptb-gray-300 cursor-pointer flex items-center
 }
+
+/* apply following three classes to html structure div containing an input-field and a label to create a floating input-field*/
+.input-field {
+  @apply block w-full appearance-none focus:outline-none bg-transparent
+}
+
+.div-input-field {
+  @apply w-1/3 relative my-4 border-b-2 border-ptb-gray-800 focus-within:border-ptb-dark-blue-600
+}
+
+.label-input-field {
+  @apply absolute top-0 duration-300 origin-0 text-ptb-gray-800
+}
+
+input:focus-within ~ label,
+input:not(:placeholder-shown) ~ label {
+  @apply transform scale-75 -translate-y-6;
+}
+
+input:focus-within ~ label {
+  @apply text-ptb-dark-blue-600;
+}
