--- a/src/custom-tailwind/custom-components.css
+++ b/src/custom-tailwind/custom-components.css
@@ -1,5 +1,5 @@
 .btn {
-  @apply bg-ptb-gray-500 rounded-lg py-0.5 px-7 shadow-sm
+  @apply bg-ptb-gray-500 rounded-lg py-1 px-7 shadow-sm
 }
 
 .ptb-list-item {
@@ -12,7 +12,7 @@
 }
 
 .div-input-field {
-  @apply w-1/3 relative my-4 border-b-2 border-ptb-gray-800 focus-within:border-ptb-dark-blue-600
+  @apply w-1/3 relative my-4 border-b-2 border-ptb-gray-800 focus-within:border-ptb-orange-600
 }
 
 .label-input-field {
@@ -25,5 +25,5 @@ input:not(:placeholder-shown) ~ label {
 }
 
 input:focus-within ~ label {
-  @apply text-ptb-dark-blue-600;
+  @apply text-ptb-orange-600;
 }
