PTB-91: refactored popup

--- a/src/app/popups/abstract-popup/popup.component.html
+++ b/src/app/popups/abstract-popup/popup.component.html
@@ -1,5 +1,5 @@
-<div class="popup flex items-center justify-center">
-  <div class="popup-body flex flex-col space-y-2 w-3/4 h-3/4 object-fill">
+<div class="popup">
+  <div class="popup-body">
     <ng-content></ng-content>
   </div>
 </div>
