PTB-91: changed input action to two-way-binding, add clear functionality

--- a/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
@@ -2,14 +2,14 @@
   <form class="bg-ptb-gray-500 m-2 p-5 rounded-md h-full object-fill">
     <div class="grid grid-cols-1 gap-4">
       <div name="input-field" class="div-input-field">
-        <input #groupName
-          (keyup.enter)="onInputGroupName(groupName.value)"
-          (blur)="onInputGroupName(groupName.value)"
+        <input
           class="input-field"
           type="text"
-          id="groupName"
+          id="groupNameField"
+          name="groupName"
+          [(ngModel)]="groupName"
         />
-        <label class="label-input-field" for="groupName">Group name</label>
+        <label class="label-input-field" for="groupNameField">Group name</label>
       </div>
 
       <div name="member-list">
