--- a/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
@@ -1,24 +1,24 @@
-<app-base-popup [id]="id" [buttonMap]="buttonMap" (buttonClicked)="onButtonClick($event)">
-  <form class="bg-ptb-gray-500 m-2 p-5 rounded-md h-full object-fill">
+<app-base-popup [id]="id">
+  <form (ngSubmit)="onSubmit()" class="bg-ptb-gray-500 m-2 p-5 rounded-md h-full object-fill" #f="ngForm">
     <div class="grid grid-cols-1 gap-4">
-      <div name="input-field" class="div-input-field">
-        <input
-          class="input-field"
-          type="text"
-          id="groupNameField"
-          name="groupName"
-          [(ngModel)]="groupName"
-        />
-        <label class="label-input-field" for="groupNameField">Group name</label>
+      <div id="input-field" class="div-input-field">
+        <input id="groupName" name="groupName" class="input-field"
+          type="text" ngModel required/>
+        <label class="label-input-field" for="groupName">Group name</label>
       </div>
 
-      <div name="member-list">
+      <div id="member-list">
         Member list coming soon!
       </div>
 
-      <div name="add-member-bar">
+      <div id="add-member-bar">
         Possibility to add members coming soon!
       </div>
+      <div class="flex flex-row justify-end space-x-4">
+        <button type="submit" class="btn bg-ptb-orange-500">Create</button>
+        <button type="button" (click)="onCancel()" class="btn bg-ptb-gray-700">Cancel</button>
+      </div>
+
     </div>
 
   </form>
