--- a/src/custom-tailwind/custom-components.css
+++ b/src/custom-tailwind/custom-components.css
@@ -12,7 +12,7 @@
 }
 
 .div-input-field {
-  @apply w-1/3 relative my-4 border-b-2 border-ptb-gray-800 focus-within:border-ptb-orange-600
+  @apply w-1/3 relative my-4 border-b-2 border-ptb-gray-800 focus-within:border-ptb-dark-blue-500
 }
 
 .label-input-field {
@@ -25,5 +25,7 @@ input:not(:placeholder-shown) ~ label {
 }
 
 input:focus-within ~ label {
-  @apply text-ptb-orange-600;
+  @apply text-ptb-dark-blue-500;
 }
+
+
