PTB-118: add structure to custom tailwind files

--- a/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
@@ -15,8 +15,8 @@
         Possibility to add members coming soon!
       </div>
       <div class="flex flex-row justify-end space-x-4">
-        <button type="submit" class="btn bg-ptb-orange-500" [disabled]="!f.valid">Create</button>
-        <button type="button" (click)="onCancel()" class="btn bg-ptb-gray-700">Cancel</button>
+        <button type="submit" class="btn btn-create" [disabled]="!f.valid">Create</button>
+        <button type="button" (click)="onCancel()" class="btn btn-cancel">Cancel</button>
       </div>
 
     </div>
