--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,11 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
-@import './custom-tailwind/custom-components.css';
+@import 'custom-tailwind/components/custom-items.css';
+@import 'custom-tailwind/components/custom-buttons.css';
+@import 'custom-tailwind/components/custom-inputs.css';
+@import 'custom-tailwind/components/custom-base-styles.css';
 @import 'tailwindcss/utilities';
-@import './custom-tailwind/custom-utilities.css';
+
 
 
 
