--- a/src/app/hubpage/header/header.component.html
+++ b/src/app/hubpage/header/header.component.html
@@ -1,5 +1,6 @@
-<div>
-  <h1 class="block px-3 text-2xl">{{groupName}}</h1>
+<div class=" bg-gradient-to-br from-ptb-blue-500 to-ptb-blue-600 h-16 w-full flex flex-row space-x-4 items-center py-3">
+  <img alt="ptb-icon" src="assets/img/icon.svg" class="flex h-full items-center pl-4">
+  <h1 class="text-3xl">{{groupName}}</h1>
 </div>
 
 
