--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-item-active.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-item-active.component.html
@@ -1,15 +1,16 @@
 <div class="grid grid-cols-1">
   <div class="ptb-list-item">
-    <svg *ngIf="group.name" class="h-4 w-4 m-4 fill-current text-ptb-dark-blue-600" xmlns="http://www.w3.org/2000/svg"
+    <svg *ngIf="group.name" class="h-4 w-4 m-4 fill-current text-ptb-dark-blue-600 object-left" xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 20 20"
          fill="currentColor">
       <path
         d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"/>
     </svg>
-    <span class="text-ptb-orange-500 text-lg font-semibold">{{group.name}}</span>
-    <button class="btn" (click)="onEditGroup()">
-      Edit Group
-    </button>
+    <span class="text-ptb-orange-500 text-lg font-semibold object-left">{{group.name}}</span>
+    <svg (click)="onEditGroup()" class="w-7 h-7 m-4 text-ptb-dark-blue-500 hover:text-ptb-dark-blue-700 object-right right-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+    </svg>
   </div>
 
   <div class="mx-5">
