--- a/src/custom-tailwind/components/custom-base-styles.css
+++ b/src/custom-tailwind/components/custom-base-styles.css
@@ -1,9 +1,5 @@
 @layer base {
-  input.ng-invalid.ng-touched{
-    @apply bg-ptb-orange-400;
-  }
-
   button:disabled{
-    @apply opacity-20;
+    @apply opacity-20
   }
 }
