PTB-94: add member item component

--- a/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
@@ -7,8 +7,9 @@
       </div>
 
 <!--      Memberlist-->
-      <div name="member-list">
-        Member list coming soon!
+      <div class="w-1/3">
+        <div class="text-md italic mb-3">Already in group</div>
+        <app-member-item></app-member-item>
       </div>
 
 <!--      Add member-->
