--- a/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
@@ -9,23 +9,26 @@
 <!--      Memberlist-->
       <div class="w-1/3">
         <div class="text-md italic mb-3">Already in group</div>
-        <app-member-item></app-member-item>
+        <div class="border border-ptb-gray-800 p-3 bg-white">
+          <div class="text-md">{{ owner.name }}</div>
+        </div>
+        <app-member-item *ngFor="let invitation of invitations"></app-member-item>
       </div>
 
 <!--      Add member-->
       <div class="grid gap-x-8 grid-cols-4">
         <div class="div-input-field w-full" [ngClass]="{'border-red-700':email.touched && email.invalid}">
-          <input id="add-member" name="add-member" class="input-field" type="text" ngModel email #email="ngModel"/>
-          <label class="label-input-field" [ngClass]="{'text-red-700':email.touched && email.invalid}" for="add-member">Email address</label>
+          <input id="email" name="email" class="input-field" type="text" ngModel email #email="ngModel"/>
+          <label class="label-input-field" [ngClass]="{'text-red-700':email.touched && email.invalid}" for="email">Email address</label>
         </div>
 
         <div class="my-auto space-x-3">
-          <input id="grant-admin-role" type="checkbox" ngModel>
+          <input id="grant-admin-role" name="grant-admin-role" type="checkbox" ngModel>
           <label class="text-ptb-gray-800 text-sm" for="grant-admin-role">Grant admin role</label>
         </div>
 
         <div class="my-auto">
-          <button class="btn btn-create" [disabled]="!email.valid">Add to group</button>
+          <button type="button" class="btn btn-create" (click)="onAddMember()" [disabled]="!email.valid">Add to group</button>
         </div>
       </div>
 
