--- a/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/create-group-popup/create-group-popup.component.html
@@ -6,32 +6,11 @@
         <label class="label-input-field" [ngClass]="{'text-red-700':groupName.touched && groupName.invalid}" for="groupName">Group name</label>
       </div>
 
-<!--      Memberlist-->
-      <div class="w-1/3">
-        <div class="text-md italic mb-3">Already in group</div>
-        <div class="border border-ptb-gray-700 py-3 px-6 bg-white flex items-center justify-between">
-          <div class="text-md">{{ owner.name }}</div>
-          <div class="text-md text-ptb-orange-600">{{ eRole.OWNER }}</div>
-        </div>
-        <app-member-item *ngFor="let invitation of invitations"></app-member-item>
-      </div>
+      <div class="text-md italic mb-3">Already in group</div>
+      <app-member-list [invitations]="invitations"></app-member-list>
 
-<!--      Add member-->
-      <div class="grid gap-x-8 grid-cols-4">
-        <div class="div-input-field w-full" [ngClass]="{'border-red-700':emailControl.touched && emailControl.invalid}">
-          <input id="email" name="email" class="input-field" type="text" ngModel email #emailControl="ngModel"/>
-          <label class="label-input-field" [ngClass]="{'text-red-700':emailControl.touched && emailControl.invalid}" for="email">Email address</label>
-        </div>
-
-        <div class="my-auto space-x-3">
-          <input id="grant-admin-role" name="grant-admin-role" type="checkbox" ngModel>
-          <label class="text-ptb-gray-800 text-sm" for="grant-admin-role">Grant admin role</label>
-        </div>
-
-        <div class="my-auto">
-          <button type="button" class="btn btn-create" [disabled]="emailControl.invalid" (click)="onAddMember()" >Add to group</button>
-        </div>
-      </div>
+      <div class="text-md italic mb-3">Add member</div>
+      <app-add-member-bar></app-add-member-bar>
 
       <div class="flex flex-row justify-end space-x-4">
         <button type="submit" class="btn btn-create" [disabled]="!f.valid">Create</button>
