PTB-94: refactor flex member item css

--- a/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
+++ b/src/app/hubpage/group-navigation-bar/member-list/member-list.component.html
@@ -1,4 +1,4 @@
-<div class="w-1/3">
+<div class="max-w-md">
   <div class="border border-ptb-gray-700 py-3 px-6 bg-white flex items-center justify-between">
     <div class="text-md">{{ owner.name }}</div>
     <div class="text-md text-ptb-orange-600">{{ role.OWNER }}</div>
