PTB-94: add grant admin role functionality

--- a/src/app/hubpage/group-navigation-bar/add-member-bar/add-member-bar.component.html
+++ b/src/app/hubpage/group-navigation-bar/add-member-bar/add-member-bar.component.html
@@ -8,8 +8,8 @@
     </div>
 
     <div class="my-auto space-x-3">
-      <input id="grant-admin-role" name="grant-admin-role" type="checkbox" ngModel>
-      <label class="text-ptb-gray-800 text-sm" for="grant-admin-role">
+      <input id="grantAdminRole" name="grantAdminRole" type="checkbox" ngModel>
+      <label class="text-ptb-gray-800 text-sm" for="grantAdminRole">
         Grant admin role
       </label>
     </div>
