--- a/src/app/hubpage/group-navigation-bar/add-member-bar/add-member-bar.component.html
+++ b/src/app/hubpage/group-navigation-bar/add-member-bar/add-member-bar.component.html
@@ -1,10 +1,15 @@
 <form (ngSubmit)="onAddMember()" #subForm="ngForm">
   <div class="grid gap-x-8 grid-cols-3">
-    <div class="div-input-field w-full" [ngClass]="{'border-red-700':emailControl.touched && emailControl.invalid}">
-      <input id="email" name="email" class="input-field" type="text" ngModel email required #emailControl="ngModel"/>
-      <label class="label-input-field" [ngClass]="{'text-red-700':emailControl.touched && emailControl.invalid}" for="email">
-        Email address
-      </label>
+    <div class="flex flex-col">
+      <div class="div-input-field w-full" [ngClass]="{'border-red-700':emailControl.touched && emailControl.invalid}">
+        <input id="email" name="email" class="input-field" type="text" ngModel email required #emailControl="ngModel"/>
+        <label class="label-input-field" [ngClass]="{'text-red-700':emailControl.touched && emailControl.invalid}" for="email">
+          Email address
+        </label>
+      </div>
+      <div *ngIf="emailControl.touched && emailControl.invalid" class="italic text-sm text-red-700">
+        {{errorMessage}}
+      </div>
     </div>
 
     <div class="my-auto space-x-3">
