style generic error popup

--- a/src/app/popups/generic-error-popup/generic-error-popup.component.html
+++ b/src/app/popups/generic-error-popup/generic-error-popup.component.html
@@ -1,16 +1,19 @@
 <app-base-popup [id]="id" [buttonMap]="buttonMap" (buttonClicked)="onButtonClick($event)">
   <form class="bg-ptb-gray-500 m-2 p-5 rounded-md h-full object-fill">
     <div class="grid grid-cols-1 gap-4">
-      <div name="title">
-        <h2>Error</h2>
+      <div name="title" class="text-2xl">
+        Error
       </div>
 
-      <div name="error-message">
-        <img src='assets/img/brokenglass.png'>
+      <div class="flex items-center space-x-4">
+        <div name="error-message" class="w-24">
+          <img src='assets/img/brokenglass.png'>
+        </div>
+        <div name="error-message" class="text-lg">
+          {{errorMessage}}
+        </div>
       </div>
-      <div name="error-message">
-        {{errorMessage}}
-      </div>
+
 
     </div>
 
