--- a/src/app/hubpage/group-navigation-bar/add-member-bar/add-member-bar.component.html
+++ b/src/app/hubpage/group-navigation-bar/add-member-bar/add-member-bar.component.html
@@ -2,7 +2,7 @@
   <div class="grid gap-x-8 grid-cols-3">
     <div class="flex flex-col">
       <div class="div-input-field w-full" [ngClass]="{'border-red-700':emailControl.touched && emailControl.invalid}">
-        <input id="email" name="email" class="input-field" type="text" ngModel email required #emailControl="ngModel"/>
+        <input id="email" name="email" class="input-field" type="text" ngModel pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required #emailControl="ngModel"/>
         <label class="label-input-field" [ngClass]="{'text-red-700':emailControl.touched && emailControl.invalid}" for="email">
           Email address
         </label>
