--- a/src/app/hubpage/group-navigation-bar/group-navigation-bar.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-navigation-bar.component.html
@@ -2,6 +2,11 @@
   <app-group-list></app-group-list>
   <button class="btn" (click)="createGroupClick()">Create Group</button>
 </div>
+<div class="p-4">
+  <app-invitation-list></app-invitation-list>
+</div>
 
 <app-create-group-popup></app-create-group-popup>
+
+
 
