--- a/src/app/hubpage/group-navigation-bar/invitation-list/invitation-item/invitation-item.component.html
+++ b/src/app/hubpage/group-navigation-bar/invitation-list/invitation-item/invitation-item.component.html
@@ -1,22 +1,23 @@
-<div class="ptb-list-item">
-  <svg *ngIf="emitter" class="h-4 w-4 m-4 fill-current text-ptb-dark-blue-600" xmlns="http://www.w3.org/2000/svg"
-       viewBox="0 0 20 20"
-       fill="currentColor">
-    <path
-      d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"/>
-  </svg>
+<div *ngIf="emitter" class="flex-row ptb-list-item">
   <div class="invitation icon">
-<!--       put Group icon here-->
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
+    </svg>
   </div>
   <div class="invitation title">
     <span>Invited by <b>{{emitter}}</b> <br>
       to join <b>{{groupName}} </b> as  <i>{{role}}</i></span>
   </div>
+
   <div class="invitation accept">
-    <button class="btn" (click)="acceptInvitationClick()"><!-- put accept Icon here--></button>
+    <svg (click)="acceptInvitation()" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+    </svg>
   </div>
   <div class="invitation decline">
-    <button class="btn" (click)="declineInvitationClick()"><!-- put decline Icon here--></button>
+    <svg (click)="declineInvitation()" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+    </svg>
   </div>
 
 
