PTB-127: add routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="h-screen">
-  <app-hubpage></app-hubpage>
+  <router-outlet></router-outlet>
 </div>
 <app-generic-error-popup></app-generic-error-popup>
 
