--- a/src/app/hubpage/hubpage.component.html
+++ b/src/app/hubpage/hubpage.component.html
@@ -1,4 +1,4 @@
-<app-header [groupName]="dataService.selectedGroup == null ? 'Place to Beer' : dataService.selectedGroup.name"></app-header>
+<app-header [groupName]="(groupService.currentGroup$ | async) == null ? 'Place to Beer' : (groupService.currentGroup$ | async).name"></app-header>
 
 <div class="grid grid-cols-4 divide-x-2 divide-ptb-gray-500 h-full">
   <div class="col-span-3">
@@ -8,5 +8,3 @@
     <app-group-navigation-bar></app-group-navigation-bar>
   </div>
 </div>
-
-
