--- a/src/app/popups/generic-confirmation-popup/generic-confirmation-popup.component.html
+++ b/src/app/popups/generic-confirmation-popup/generic-confirmation-popup.component.html
@@ -1,14 +1,20 @@
 <app-base-popup [id]="id" [buttonMap]="buttonMap" (buttonClicked)="onButtonClick($event)">
   <form class="bg-ptb-gray-500 m-2 p-5 rounded-md h-full object-fill">
     <div class="grid grid-cols-1 gap-4">
-      <div name="confirmation-buttons">
-        <div name="button">
-          <button name="confirm">Ok</button>
-<!--          TODO-->
+      <div class="icon">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+        </svg>
+      </div>
+      <div class="text-2xl">
+        {{confirmationMessage}}
+      </div>
+      <div class="confirmation-buttons">
+        <div class="confirmation-button btn-create">
+          <button name="confirm" (click)="confirm()">Confirm </button>
         </div>
-        <div name="button">
-          <button name="cancel">Cancel</button>
-<!--          TODO-->
+        <div class="confirmation-button btn-cancel">
+          <button name="cancel" (click)="cancel()">Cancel</button>
         </div>
       </div>
 
