PTB-160: refactor placeholder

--- a/src/app/hubpage/placeholder/placeholder.component.html
+++ b/src/app/hubpage/placeholder/placeholder.component.html
@@ -1,4 +1,4 @@
 <div class="flex h-full items-center justify-center heropattern-ilikefood-ptb-gray-600 opacity-50">
-  <div class="text-3xl">{{dataService.selectedGroup == null ? "No group was selected" : "Welcome to " + dataService.selectedGroup.name + "!"}}</div>
+  <div class="text-3xl">{{(groupService.currentGroup$ | async) == null ? "No group was selected" : "Welcome to " + (groupService.currentGroup$ | async).name + "!"}}</div>
 </div>
 
