PTB-160: delete popup button bar

--- a/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-list/group-item-active/group-edit-popup/group-edit-popup.component.html
@@ -1,4 +1,4 @@
-<app-base-popup [id]="id" [buttonMap]="buttonMap" (buttonClicked)="onButtonClick($event)">
+<app-base-popup [id]="id" (buttonClicked)="onButtonClick($event)">
   <form #groupForm="ngForm" (ngSubmit)="onSubmit()" class="bg-ptb-gray-500 m-2 p-5 rounded-md h-full object-fill">
 
     <span *ngIf="isUserOwner">
