--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
   <app-hubpage></app-hubpage>
 </div>
 <app-generic-error-popup></app-generic-error-popup>
-
+<app-generic-confirmation-popup></app-generic-confirmation-popup>
