PTB-100: removed comments in group-edit-popup.component.ts and added comments in generic-confirmation-popup.component.ts and adapted buttons in confirmation popup

--- a/src/app/popups/generic-confirmation-popup/generic-confirmation-popup.component.html
+++ b/src/app/popups/generic-confirmation-popup/generic-confirmation-popup.component.html
@@ -10,10 +10,10 @@
         {{confirmationMessage}}
       </div>
       <div class="confirmation-buttons">
-        <div class="confirmation-button btn btn-create"(click)="confirm()">
+        <div class="confirmation-button btn btn-create cursor-pointer"(click)="confirm()">
           <button name="confirm" (click)="confirm()">Confirm </button>
         </div>
-        <div class="confirmation-button btn btn-cancel" (click)="cancel()">
+        <div class="confirmation-button btn btn-cancel cursor-pointer" (click)="cancel()">
           <button name="cancel" (click)="cancel()">Cancel</button>
         </div>
       </div>
