PTB-160: add routing for create-group-popup *save currentGroup to local storage

--- a/src/app/hubpage/group-navigation-bar/group-navigation-bar.component.html
+++ b/src/app/hubpage/group-navigation-bar/group-navigation-bar.component.html
@@ -1,12 +1,12 @@
 <div class="p-4">
   <app-group-list></app-group-list>
-  <button class="btn" (click)="createGroupClick()">Create Group</button>
+  <button class="btn flex flex-row ml-auto" (click)="onCreateGroup()">Create Group</button>
 </div>
 <div class="p-4">
   <app-invitation-list></app-invitation-list>
 </div>
 
-<app-create-group-popup></app-create-group-popup>
+
 
 
 
