--- a/src/app/hubpage/hubpage.component.html
+++ b/src/app/hubpage/hubpage.component.html
@@ -6,5 +6,6 @@
   </div>
   <div class="bg-ptb-gray-100">
     <app-group-navigation-bar></app-group-navigation-bar>
+    <router-outlet></router-outlet>
   </div>
 </div>
