PTB-160: add routing for group-edit-popup *refactor generic-error-popup html

--- a/src/app/popups/generic-error-popup/generic-error-popup.component.html
+++ b/src/app/popups/generic-error-popup/generic-error-popup.component.html
@@ -12,9 +12,7 @@
         <div name="error-message" class="text-lg">
           {{errorMessage}}
         </div>
-        <div class="ok-button btn btn-cancel" (click)="cancel()">
-          <button name="ok" (click)="cancel()">OK</button>
-        </div>
+        <button name="ok" class="ok-button btn btn-cancel" (click)="onCancel()">OK</button>
       </div>
 
 
